rename page.css 7

--- a/basics.html
+++ b/basics.html
@@ -581,9 +581,9 @@
                               </section>
                             </div>
                             <div class="site-content__content-menu">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
-                                  <div class="_1wlfjr">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
+                                  <div class="site-content__content-menu-question">
                                     Which city do you want to host your
                                     experience in?
                                   </div>
@@ -634,7 +634,7 @@
                                         <div class="spinner-chart__input-title-text">City</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_usmffxk">
+                                        <div class="auth-container__form-input-field-wrapper">
                                           <input
                                             aria-autocomplete="both"
                                             aria-controls="listbox--1"
@@ -710,8 +710,8 @@
                               </fieldset>
                             </div>
                             <div class="_1ww49e7">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
                                   Which language(s) will you offer your
                                   experience in?
                                 </legend>
@@ -785,8 +785,8 @@
                               </fieldset>
                             </div>
                             <div class="_1y8yg3n">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
                                   <div class="main-content__details-form-repeat-sched">
                                     Airbnb partner organization (optional)
                                   </div>
@@ -962,10 +962,10 @@
                     data-testid="primary-language-ca"
                     id="radio-ca"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ca"
-                  /><span class="_dclc1y">Català</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Català</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -974,10 +974,10 @@
                     data-testid="primary-language-de"
                     id="radio-de"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="de"
-                  /><span class="_dclc1y">Deutsch</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Deutsch</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -986,11 +986,11 @@
                     data-testid="primary-language-en"
                     id="radio-en"
                     name=""
-                    class="_1j123cny"
+                    class="site-content__content-wrapper-rules-radio-yes"
                     type="radio"
                     value="en"
                     checked=""
-                  /><span class="_dclc1y">English</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">English</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -999,10 +999,10 @@
                     data-testid="primary-language-es"
                     id="radio-es"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="es"
-                  /><span class="_dclc1y">Español</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Español</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1011,10 +1011,10 @@
                     data-testid="primary-language-fr"
                     id="radio-fr"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="fr"
-                  /><span class="_dclc1y">Français</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Français</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1023,10 +1023,10 @@
                     data-testid="primary-language-it"
                     id="radio-it"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="it"
-                  /><span class="_dclc1y">Italiano</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Italiano</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1035,10 +1035,10 @@
                     data-testid="primary-language-ja"
                     id="radio-ja"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ja"
-                  /><span class="_dclc1y">日本語</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">日本語</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1047,10 +1047,10 @@
                     data-testid="primary-language-ko"
                     id="radio-ko"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ko"
-                  /><span class="_dclc1y">한국어</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">한국어</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1059,10 +1059,10 @@
                     data-testid="primary-language-pt"
                     id="radio-pt"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="pt"
-                  /><span class="_dclc1y">Português</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Português</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1071,10 +1071,10 @@
                     data-testid="primary-language-ru"
                     id="radio-ru"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ru"
-                  /><span class="_dclc1y">Русский</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Русский</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1083,10 +1083,10 @@
                     data-testid="primary-language-zh"
                     id="radio-zh"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="zh"
-                  /><span class="_dclc1y">中文 (简体)</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">中文 (简体)</span></label
                 >
               </div>
             </div>
