--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -236,7 +236,7 @@
                                     <div class="_1l0iogx">
                                       <div class="_rcxi5a">
                                         <div class="_171jtg">
-                                          <div class="_1a488ly">
+                                          <div class="inbox-items-header__icon">
                                             <div class="_1u9tuye">
                                               <svg
                                                 viewBox="0 0 16 16"
