--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -486,9 +486,9 @@
                                             </svg>
                                           </div>
                                         </div>
-                                        <div class="_4l12l8">
+                                        <div class="contact-host__textarea-container">
                                           <div
-                                            class="_pxnjg"
+                                            class="description-textarea__help"
                                             id="MINIMUM_AGE-helptext"
                                           >
                                             Set age limits for guests. Minors
@@ -506,8 +506,8 @@
                                         data-section-id="UNDER_TWO_ALLOWED_SECTION"
                                         style="padding-bottom: 64px"
                                       >
-                                        <fieldset class="_25bp3z">
-                                          <legend class="_1wjt7fx"></legend>
+                                        <fieldset class="site-content__content-fieldset">
+                                          <legend class="site-content__content-menu-legend"></legend>
                                           <div
                                             id="underTwo"
                                             aria-disabled="false"
@@ -556,8 +556,8 @@
                                         data-section-id="ACCESSIBILITY_FEATURES_SECTION"
                                         style="padding-bottom: 48px"
                                       >
-                                        <fieldset class="_25bp3z">
-                                          <legend class="_1wjt7fx">
+                                        <fieldset class="site-content__content-fieldset">
+                                          <legend class="site-content__content-menu-legend">
                                             <span class="place__tips-desc-text dir dir-ltr"
                                               >Does your experience have any
                                               accessibility features?
@@ -896,7 +896,7 @@
                                       >
                                         <label
                                           for="additional-requirements-text-area"
-                                          ><div class="_1wgf3yo">
+                                          ><div class="textarea-label-wrapper">
                                             <div
                                               class="account-container-mb__header-profile-wrapper"
                                               style="
@@ -909,7 +909,7 @@
                                               Additional requirements (optional)
                                             </div>
                                           </div>
-                                          <div class="_4l12l8">
+                                          <div class="contact-host__textarea-container">
                                             <div class="contact-host__textarea-wrapper">
                                               <div dir="ltr">
                                                 <textarea
@@ -929,7 +929,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                         >
                                         <div class="_1b3feto">
                                           <div
-                                            class="_pxnjg"
+                                            class="description-textarea__help"
                                             id="additional-requirements-text-area-help"
                                           >
                                             <span aria-hidden="true"
@@ -952,8 +952,8 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                         data-plugin-in-point-id="REQUIRE_VERIFIED_ID_SECTION"
                                         data-section-id="REQUIRE_VERIFIED_ID_SECTION"
                                       >
-                                        <fieldset class="_25bp3z">
-                                          <legend class="_1wjt7fx">
+                                        <fieldset class="site-content__content-fieldset">
+                                          <legend class="site-content__content-menu-legend">
                                             <span class="place__tips-desc-text dir dir-ltr"
                                               >Require Verified ID</span
                                             >
