--- a/edit/what.html
+++ b/edit/what.html
@@ -399,23 +399,23 @@
                                       >
                                         <div
                                           id="description-label"
-                                          class="_1gh8ie6"
+                                          class="guest-container__form-question"
                                         >
                                           What will you and your guests do?
                                         </div>
-                                        <ul class="_17qgme1">
-                                          <li class="_1pz1yyw">
+                                        <ul class="guest-container__form-question-ul">
+                                          <li class="guest-container__form-question-li">
                                             Provide specific plans from start to
                                             finish, not multiple ideas or
                                             options
                                           </li>
-                                          <li class="_1pz1yyw">
+                                          <li class="guest-container__form-question-li">
                                             Describe what makes your experience
                                             special—something that guests
                                             wouldn’t do on their own
                                           </li>
                                         </ul>
-                                        <div class="_4l12l8">
+                                        <div class="contact-host__textarea-container">
                                           <div class="contact-host__textarea-wrapper">
                                             <div dir="ltr">
                                               <textarea
@@ -442,7 +442,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                         </div>
                                         <div class="_1b3feto">
                                           <div
-                                            class="_pxnjg"
+                                            class="description-textarea__help"
                                             id="description-textarea-help"
                                           >
                                             <span aria-hidden="true"
@@ -477,9 +477,9 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           padding-bottom: 40px;
                                         "
                                       >
-                                        <fieldset class="_25bp3z">
-                                          <legend class="_1wjt7fx">
-                                            <div class="_1wlfjr">
+                                        <fieldset class="site-content__content-fieldset">
+                                          <legend class="site-content__content-menu-legend">
+                                            <div class="site-content__content-menu-question">
                                               How long is your experience?
                                             </div>
                                           </legend>
@@ -636,7 +636,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             </div>
                                             <div class="place__recommended-no">
                                               <div
-                                                class="_pxnjg"
+                                                class="description-textarea__help"
                                                 id="DURATION-InputField-help"
                                               >
                                                 <span
@@ -659,8 +659,8 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                         data-section-id="ONLINE_QUESTION"
                                         style="padding-bottom: 40px"
                                       >
-                                        <fieldset class="_25bp3z">
-                                          <legend class="_1wjt7fx">
+                                        <fieldset class="site-content__content-fieldset">
+                                          <legend class="site-content__content-menu-legend">
                                             <span class="flex-items-center"
                                               ><span class="place__tips-desc-text dir dir-ltr"
                                                 >Where will you broadcast
@@ -699,7 +699,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       aria-labelledby="ONLINE_QUESTION-0-radio-row-row-title"
                                                       aria-describedby="ONLINE_QUESTION-0-radio-row-row-subtitle"
                                                       id="ONLINE_QUESTION-0-radio-row-row-radio-button"
-                                                      class="_g4rlqtx"
+                                                      class="explore-filter-menu__radio-input"
                                                       type="radio"
                                                       value="0"
                                                       checked=""
