--- a/experiences.html
+++ b/experiences.html
@@ -103,7 +103,7 @@
                           aria-current="page"
                           href="experiences.html"
                           class="app-theme__navbar-left-menu-list-text-wrapper"
-                          ><div class="_ywzjut3">Experiences</div></a
+                          ><div class="app-theme__navbar-left-menu-list-text-a">Experiences</div></a
                         >
                       </div>
                     </li>
@@ -111,8 +111,8 @@
                       <div class="app-theme__navbar-left-menu-list">
                         <a href="insights.html" class="app-theme__navbar-left-menu-list-text-wrapper"
                           ><div class="app-theme__navbar-left-menu-list-text">
-                            Insights<strong class="_josukr"
-                              ><strong class="_19pdp32f">NEW</strong></strong
+                            Insights<strong class="app-theme__navbar-left-menu-list-strong"
+                              ><strong class="app-theme__menu-list-strong-text">NEW</strong></strong
                             >
                           </div></a
                         >
