--- a/explore-when.html
+++ b/explore-when.html
@@ -2945,7 +2945,7 @@
                                                                     >
                                                                       <button
                                                                         aria-label="Exact dates"
-                                                                        class="_12i6oakv"
+                                                                        class="header__search-date-option-exact-dates-btn"
                                                                         role="radio"
                                                                         aria-checked="true"
                                                                         type="button"
@@ -3416,7 +3416,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="_12i6oakv"
+                                                                        class="header__search-date-option-exact-dates-btn"
                                                                         role="radio"
                                                                         aria-checked="true"
                                                                         type="button"
