--- a/forgot_password.html
+++ b/forgot_password.html
@@ -77,7 +77,7 @@
                                 <input type="hidden" name="authenticity_token"
                                   value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                 <div>
-                                  <div class="auth-container__form-email-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                  <div class="auth-container__form-email-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
                                       <div class="auth-container__form-label">
                                         <div class="auth-container__form-label-text">Email</div>
                                       </div>
@@ -91,7 +91,7 @@
                                   <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
-                                  <div class="auth-container__form-email-field-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                  <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
                                       <div class="auth-container__form-email-field-content">
                                         <div class="auth-container__form-label-text">Email</div>
                                       </div>
@@ -212,7 +212,7 @@
                                       Become a Host
                                     </div>
                                   </a>
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -334,7 +334,7 @@
                                 <input type="hidden" name="authenticity_token"
                                   value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                 <div>
-                                  <div class="auth-container__form-email-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                  <div class="auth-container__form-email-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
                                       <div class="auth-container__form-label">
                                         <div class="auth-container__form-label-text">Email</div>
                                       </div>
@@ -348,7 +348,7 @@
                                   <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
-                                  <div class="auth-container__form-email-field-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                  <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
                                       <div class="auth-container__form-email-field-content">
                                         <div class="auth-container__form-label-text">Email</div>
                                       </div>
