--- a/payment.html
+++ b/payment.html
@@ -467,7 +467,7 @@
                                                       <input
                                                         id="0"
                                                         name="payment-plan-option"
-                                                        class="_1j123cny"
+                                                        class="site-content__content-wrapper-rules-radio-yes"
                                                         type="radio"
                                                         value="0"
                                                         checked=""
@@ -507,7 +507,7 @@
                                                       <input
                                                         id="1"
                                                         name="payment-plan-option"
-                                                        class="_unew8tb"
+                                                        class="site-content__content-wrapper-rules-radio-no"
                                                         type="radio"
                                                         value="1"
                                                       /></div
