--- a/payments/payment-form.html
+++ b/payments/payment-form.html
@@ -15,7 +15,7 @@
               <div class="flex">
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: none; inset: 0px 0px -1px"
                   ></div>
                   <div class="_19yghr9">
@@ -61,7 +61,7 @@
                     <div class="_1l4lr7v"></div>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px 0px -1px;
                       border-radius: 8px 8px 0px 0px;
@@ -75,7 +75,7 @@
               <div class="flex">
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: none; inset: 0px -1px -1px 0px"
                   ></div>
                   <div class="_19yghr9">
@@ -101,7 +101,7 @@
                     </label>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px -1px -1px 0px;
                       border-radius: 0px 0px 0px 8px;
@@ -113,7 +113,7 @@
                 </div>
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: none; inset: 0px 0px -1px"
                   ></div>
                   <div class="_19yghr9">
@@ -139,7 +139,7 @@
                     </label>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px 0px -1px;
                       border-radius: 0px 0px 8px;
@@ -158,7 +158,7 @@
               <div class="flex">
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: rgb(255, 248, 246); inset: 0px 0px -1px"
                   ></div>
                   <div class="_13k6w4v1">
@@ -188,7 +188,7 @@
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_usmffxk">
+                        <div class="auth-container__form-input-field-wrapper">
                           <input
                             name="credit-card-number"
                             autocomplete="off"
@@ -237,7 +237,7 @@
                     </div>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px 0px -1px;
                       border-radius: 8px 8px 0px 0px;
@@ -251,7 +251,7 @@
               <div class="flex">
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: none; inset: 0px -1px -1px 0px"
                   ></div>
                   <div class="_19yghr9">
@@ -277,7 +277,7 @@
                     </label>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px -1px -1px 0px;
                       border-radius: 0px 0px 0px 8px;
@@ -289,7 +289,7 @@
                 </div>
                 <div class="relative" style="flex: 1 1 0%">
                   <div
-                    class="_sbmagf"
+                    class="presentation-dialog"
                     style="background: none; inset: 0px 0px -1px"
                   ></div>
                   <div class="_19yghr9">
@@ -315,7 +315,7 @@
                     </label>
                   </div>
                   <div
-                    class="_t26glb"
+                    class="presentation-dialog-spacer"
                     style="
                       inset: 0px 0px -1px;
                       border-radius: 0px 0px 8px;
