--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -842,7 +842,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -2312,7 +2312,7 @@
                     </div>
                     <div class="_v0ipn8">
                       <div class="auth-container__form-email-wrapper">
-                        <label class="_1yw7hpv" for="zipCode"
+                        <label class="auth-container__form-email-label" for="zipCode"
                           ><div class="auth-container__form-label">
                             <div class="auth-container__form-label-text">ZIP code</div>
                           </div>
@@ -2335,7 +2335,7 @@
                     </div>
                     <div class="_v0ipn8">
                       <div class="auth-container__form-email-field-wrapper">
-                        <label class="_1yw7hpv" for="zipCode"
+                        <label class="auth-container__form-email-label" for="zipCode"
                           ><div class="auth-container__form-email-field-content">
                             <div class="auth-container__form-label-text">ZIP code</div>
                           </div>
@@ -2357,7 +2357,7 @@
                           </div>
                         </label>
                       </div>
-                      <div class="_4l12l8">
+                      <div class="contact-host__textarea-container">
                         <div class="products-container__alert-warning-date-text" id="credit-card-zip-error">
                           <span style="margin-right: 4px"
                             ><svg
