--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -630,7 +630,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
