--- a/places.html
+++ b/places.html
@@ -156,7 +156,7 @@
                                       Switch to hosting
                                     </div>
                                   </a>
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -227,7 +227,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">3</div>
+                                      <div class="status-no">3</div>
                                     </button>
                                   </div>
                                 </div>
