--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -804,7 +804,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -875,7 +875,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">2</div>
+                                      <div class="status-no">2</div>
                                     </button>
                                   </div>
                                 </div>
