--- a/products.html
+++ b/products.html
@@ -8510,7 +8510,7 @@
                                               Become a Host
                                             </div></a
                                           >
-                                          <div class="_1ubw29">
+                                          <div class="header-nav__button">
                                             <button
                                               type="button"
                                               class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -8593,7 +8593,7 @@
                                                   alt=""
                                                 />
                                               </div>
-                                              <div class="_1f7hhcdo">1</div>
+                                              <div class="status-no">1</div>
                                             </button>
                                           </div>
                                         </div>
@@ -9413,7 +9413,7 @@
                                   </div>
                                   <div class="flex-before-after dir dir-ltr">
                                     <div class="flex-row-full-width">
-                                      <div class="_16e70jgn">
+                                      <div class="relative-mx-0">
                                         <div>
                                           <div
                                             class="flex-before-after dir dir-ltr"
@@ -16518,7 +16518,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_1s21a6e2">
+                                      <div class="confirm-pay__content-right-section">
                                         <div class="confirm-pay__content-right-container">
                                           <div style="padding-bottom: 48px">
                                             <div
@@ -16682,7 +16682,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor,
@@ -16735,7 +16735,7 @@
                                                                             </div>
                                                                           </button>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -16790,7 +16790,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor,
@@ -16867,7 +16867,7 @@
                                                                             </div>
                                                                           </div>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -17182,7 +17182,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor,
@@ -17233,7 +17233,7 @@
                                                                             </div>
                                                                           </button>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -17288,7 +17288,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor,
@@ -17365,7 +17365,7 @@
                                                                             </div>
                                                                           </div>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -17877,7 +17877,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor_invalid,
@@ -17932,7 +17932,7 @@
                                                                             </div>
                                                                           </button>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -17987,7 +17987,7 @@
                                                                         >
                                                                           <div
                                                                             role="presentation"
-                                                                            class="_sbmagf"
+                                                                            class="presentation-dialog"
                                                                             style="
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor,
@@ -18064,7 +18064,7 @@
                                                                             </div>
                                                                           </div>
                                                                           <div
-                                                                            class="_t26glb"
+                                                                            class="presentation-dialog-spacer"
                                                                             style="
                                                                               inset: 0px
                                                                                 0px -1px;
@@ -21503,7 +21503,7 @@
         >
           <div class="relative">
             <div class="_1qthdmcg">
-              <button type="button" class="_11eqlma4">
+              <button type="button" class="button-container__wrapper">
                 <div class="_1ed6s2g">
                   <svg
                     viewBox="0 0 24 24"
