--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -157,7 +157,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">2</div>
+                                      <div class="status-no">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -843,8 +843,8 @@
                                         >
                                           <div class="_1ou8uzt">
                                             <label for="about"
-                                              ><div class="_1wgf3yo">About</div>
-                                              <div class="_4l12l8">
+                                              ><div class="textarea-label-wrapper">About</div>
+                                              <div class="contact-host__textarea-container">
                                                 <div class="contact-host__textarea-wrapper">
                                                   <div dir="ltr">
                                                     <textarea
@@ -1936,8 +1936,8 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   >
                                     <div class="_1ou8uzt">
                                       <label for="about"
-                                        ><div class="_1wgf3yo">About</div>
-                                        <div class="_4l12l8">
+                                        ><div class="textarea-label-wrapper">About</div>
+                                        <div class="contact-host__textarea-container">
                                           <div class="contact-host__textarea-wrapper">
                                             <div dir="ltr">
                                               <textarea
