--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -219,7 +219,7 @@
                                   aria-labelledby="reason-GUEST_OFFER_EXTRA-row-title"
                                   aria-describedby="reason-GUEST_OFFER_EXTRA-row-subtitle"
                                   id="reason-GUEST_OFFER_EXTRA-row-radio-button"
-                                  class="_g4rlqtx"
+                                  class="explore-filter-menu__radio-input"
                                   type="radio"
                                   value="GUEST_OFFER_EXTRA"
                                 />
@@ -308,20 +308,20 @@
                       class="payment-method__section"
                     >
                       <label for="note_to_responder"
-                        ><div class="_1wgf3yo">
+                        ><div class="textarea-label-wrapper">
                           <span class="_7cmsd4" id="note_to_beneficiary_label"
                             >Note to Kuniatsu</span
                           >
                         </div>
                         <div
-                          class="_pxnjg"
+                          class="description-textarea__help"
                           id="note_to_responder-DLS-describedBy-label"
                         >
-                          <span class="_1m2pcp0"
+                          <span class="description-textarea__help-text"
                             >Let them know why you’re sending money.</span
                           >
                         </div>
-                        <div class="_4l12l8">
+                        <div class="contact-host__textarea-container">
                           <div class="contact-host__textarea-wrapper">
                             <div dir="ltr">
                               <textarea
