--- a/reviews.html
+++ b/reviews.html
@@ -393,7 +393,7 @@
                                               aria-labelledby="expectations_option_very_high-row-title"
                                               aria-describedby="expectations_option_very_high-row-subtitle"
                                               id="expectations_option_very_high-row-radio-button"
-                                              class="_g4rlqtx"
+                                              class="explore-filter-menu__radio-input"
                                               type="radio"
                                               value="5"
                                             />
@@ -417,7 +417,7 @@
                                               aria-labelledby="expectations_option_very_high-row-title"
                                               aria-describedby="expectations_option_very_high-row-subtitle"
                                               id="expectations_option_very_high-row-radio-button"
-                                              class="_g4rlqtx"
+                                              class="explore-filter-menu__radio-input"
                                               type="radio"
                                               value="5"
                                             />
@@ -1285,10 +1285,10 @@
                               </div>
                               <div class="_15ee0ob">
                                 <label for="public_review_input"
-                                  ><div class="_1wgf3yo">
+                                  ><div class="textarea-label-wrapper">
                                     Write a public review for future guests
                                   </div>
-                                  <div class="_4l12l8">
+                                  <div class="contact-host__textarea-container">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
@@ -1306,10 +1306,10 @@
                               </div>
                               <div class="_15ee0ob">
                                 <label for="private_review_input"
-                                  ><div class="_1wgf3yo">
+                                  ><div class="textarea-label-wrapper">
                                     Write a private note to Jose Angelo
                                   </div>
-                                  <div class="_4l12l8">
+                                  <div class="contact-host__textarea-container">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
