--- a/specific_trip.html
+++ b/specific_trip.html
@@ -97,7 +97,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -168,7 +168,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">2</div>
+                                      <div class="status-no">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -1624,7 +1624,7 @@
                                                       curious) Everything is
                                                       just for you.
                                                     </div>
-                                                    <div class="_1gh8ie6">
+                                                    <div class="guest-container__form-question">
                                                       <a
                                                         target="_blank"
                                                         history="[object Object]"
