--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1168,8 +1168,8 @@
                             </div>
                             <div class="">
                               <div class="margin__y-24">
-                                <fieldset class="_25bp3z" role="radiogroup">
-                                  <legend class="_1wjt7fx">
+                                <fieldset class="site-content__content-fieldset" role="radiogroup">
+                                  <legend class="site-content__content-menu-legend">
                                     <div class="inline">
                                       When are you typically available to host?
                                     </div>
@@ -1181,13 +1181,13 @@
                                       ><input
                                         id="info_available_date_to_host-Weekdays"
                                         name="info_available_date_to_host"
-                                        class="_1j123cny"
+                                        class="site-content__content-wrapper-rules-radio-yes"
                                         aria-invalid="false"
                                         type="radio"
                                         data-veloute="info_available_date_to_host-1"
                                         value="1"
                                         checked=""
-                                      /><span class="_dclc1y"
+                                      /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                         ><div class="payment-payout__notice-desc">
                                           Weekdays
                                         </div></span
@@ -1201,12 +1201,12 @@
                                       ><input
                                         id="info_available_date_to_host-Weekends"
                                         name="info_available_date_to_host"
-                                        class="_unew8tb"
+                                        class="site-content__content-wrapper-rules-radio-no"
                                         aria-invalid="false"
                                         type="radio"
                                         data-veloute="info_available_date_to_host-2"
                                         value="2"
-                                      /><span class="_dclc1y"
+                                      /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                         ><div class="payment-payout__notice-desc">
                                           Weekends
                                         </div></span
@@ -1220,12 +1220,12 @@
                                       ><input
                                         id="info_available_date_to_host-Both weekdays and weekends"
                                         name="info_available_date_to_host"
-                                        class="_unew8tb"
+                                        class="site-content__content-wrapper-rules-radio-no"
                                         aria-invalid="false"
                                         type="radio"
                                         data-veloute="info_available_date_to_host-3"
                                         value="3"
-                                      /><span class="_dclc1y"
+                                      /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                         ><div class="payment-payout__notice-desc">
                                           Both weekdays and weekends
                                         </div></span
@@ -1239,12 +1239,12 @@
                                       ><input
                                         id="info_available_date_to_host-I don’t know yet"
                                         name="info_available_date_to_host"
-                                        class="_unew8tb"
+                                        class="site-content__content-wrapper-rules-radio-no"
                                         aria-invalid="false"
                                         type="radio"
                                         data-veloute="info_available_date_to_host-0"
                                         value="0"
-                                      /><span class="_dclc1y"
+                                      /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                         ><div class="payment-payout__notice-desc">
                                           I don’t know yet
                                         </div></span
