--- a/submission/about.html
+++ b/submission/about.html
@@ -1060,11 +1060,11 @@
                                 </div>
                               </section>
                             </div>
-                            <div class="_13jnc9w">
+                            <div class="place__recommended-section">
                               <div class="">
                                 <div class="margin__y-24">
-                                  <fieldset class="_25bp3z" role="radiogroup">
-                                    <legend class="_1wjt7fx">
+                                  <fieldset class="site-content__content-fieldset" role="radiogroup">
+                                    <legend class="site-content__content-menu-legend">
                                       <div class="inline">
                                         How are you hosting this experience?
                                       </div>
@@ -1076,13 +1076,13 @@
                                         ><input
                                           id="info_best_describe_you_and_experience-I’m hosting by myself"
                                           name="info_best_describe_you_and_experience"
-                                          class="_1j123cny"
+                                          class="site-content__content-wrapper-rules-radio-yes"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_best_describe_you_and_experience-0"
                                           value="0"
                                           checked=""
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">
                                             I’m hosting by myself
                                           </div></span
@@ -1096,12 +1096,12 @@
                                         ><input
                                           id="info_best_describe_you_and_experience-I have a team who helps me host"
                                           name="info_best_describe_you_and_experience"
-                                          class="_unew8tb"
+                                          class="site-content__content-wrapper-rules-radio-no"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_best_describe_you_and_experience-1"
                                           value="1"
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">
                                             I have a team who helps me host
                                           </div></span
@@ -1202,13 +1202,13 @@
                               </div>
                             </section>
                             <label for="about_host_input"
-                              ><div class="_1wgf3yo">
+                              ><div class="textarea-label-wrapper">
                                 <div class="_1p5glqf">
                                   What makes you uniquely qualified to host this
                                   experience?
                                 </div>
                               </div>
-                              <div class="_4l12l8">
+                              <div class="contact-host__textarea-container">
                                 <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
@@ -1227,7 +1227,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               </div></label
                             >
                             <div class="_1b3feto">
-                              <div class="_pxnjg" id="about_host_input-help">
+                              <div class="description-textarea__help" id="about_host_input-help">
                                 <span aria-hidden="true">574/850</span
                                 ><span
                                   class="text-highlight dir dir-ltr"
