--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1104,7 +1104,7 @@
                                         id="flexible"
                                         data-testid="policy__flexible"
                                         name="lyt-radio-cancellation-policy"
-                                        class="_g4rlqtx"
+                                        class="explore-filter-menu__radio-input"
                                         type="radio"
                                         value="CANCEL_FLEXIBLE"
                                         checked=""
