--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1091,30 +1091,30 @@
                                 ></div>
                               </div>
                             </div>
-                            <div class="_1uhu1ks">
+                            <div class="site-content__content-wrapper-rules">
                               <div class="inline">
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   We’re looking for passionate storytellers who
                                   can share a unique perspective and insider
                                   knowledge.
                                 </p>
                                 This could include:
-                                <ul class="_14mdv64">
+                                <ul class="site-content__content-wrapper-rules-ol">
                                   <li>Being a well-informed enthusiast</li>
                                   <li>Having specialized training</li>
                                   <li>Having achievements in your field</li>
                                 </ul>
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   Guests value hosts with a distinctive point of
                                   view they can’t find elsewhere.
                                 </p>
                               </div>
                             </div>
-                            <div class="_1tluusc">
+                            <div class="site-content__content-wrapper-rules-radio-grp">
                               <div class="">
                                 <div class="margin__y-24">
-                                  <fieldset class="_25bp3z" role="radiogroup">
-                                    <legend class="_1wjt7fx">
+                                  <fieldset class="site-content__content-fieldset" role="radiogroup">
+                                    <legend class="site-content__content-menu-legend">
                                       <div class="inline">
                                         Have you hosted this activity before?
                                       </div>
@@ -1126,13 +1126,13 @@
                                         ><input
                                           id="info_previously_hosted_activity-Yes, I’ve hosted or taught this activity professionally"
                                           name="info_previously_hosted_activity"
-                                          class="_1j123cny"
+                                          class="site-content__content-wrapper-rules-radio-yes"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_previously_hosted_activity-0"
                                           value="0"
                                           checked=""
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">
                                             Yes, I’ve hosted or taught this
                                             activity professionally
@@ -1147,12 +1147,12 @@
                                         ><input
                                           id="info_previously_hosted_activity-Yes, I’ve hosted this activity informally for friends or family"
                                           name="info_previously_hosted_activity"
-                                          class="_unew8tb"
+                                          class="site-content__content-wrapper-rules-radio-no"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_previously_hosted_activity-1"
                                           value="1"
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">
                                             Yes, I’ve hosted this activity
                                             informally for friends or family
@@ -1167,12 +1167,12 @@
                                         ><input
                                           id="info_previously_hosted_activity-No, I’ve never hosted this activity before"
                                           name="info_previously_hosted_activity"
-                                          class="_unew8tb"
+                                          class="site-content__content-wrapper-rules-radio-no"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_previously_hosted_activity-2"
                                           value="2"
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">
                                             No, I’ve never hosted this activity
                                             before
