--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1173,15 +1173,15 @@
                               </div>
                               <div class="_9j2psw">
                                 <div class="">
-                                  <fieldset class="_25bp3z">
-                                    <legend class="_1wjt7fx">
+                                  <fieldset class="site-content__content-fieldset">
+                                    <legend class="site-content__content-menu-legend">
                                       <div class="main-content__schedule-text">
                                         Does your experience have any
                                         accessibility features? (optional)
                                       </div>
                                       <div class="tab__header-desc"></div>
                                     </legend>
-                                    <div class="_4l12l8">
+                                    <div class="contact-host__textarea-container">
                                       <div
                                         id="Tag:4804"
                                         aria-disabled="false"
@@ -1226,7 +1226,7 @@
                                         ></label>
                                       </div>
                                     </div>
-                                    <div class="_4l12l8">
+                                    <div class="contact-host__textarea-container">
                                       <div
                                         id="Tag:4802"
                                         aria-disabled="false"
@@ -1273,7 +1273,7 @@
                                         ></label>
                                       </div>
                                     </div>
-                                    <div class="_4l12l8">
+                                    <div class="contact-host__textarea-container">
                                       <div
                                         id="Tag:4805"
                                         aria-disabled="false"
@@ -1493,12 +1493,12 @@
                               </div>
                               <div class="_9j2psw">
                                 <label for="trip_template_traveler_requirements"
-                                  ><div class="_1wgf3yo">
+                                  ><div class="textarea-label-wrapper">
                                     <div class="_d8a74u">
                                       Additional requirements (optional)
                                     </div>
                                   </div>
-                                  <div class="_4l12l8">
+                                  <div class="contact-host__textarea-container">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
