--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1092,14 +1092,14 @@
                                 ></div>
                               </div>
                             </div>
-                            <div class="_1uhu1ks">
+                            <div class="site-content__content-wrapper-rules">
                               <div class="inline">
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   We’re looking for engaging activities that are
                                   designed for “doing” and not just “watching.”
                                 </p>
                                 For example:
-                                <ul class="_14mdv64">
+                                <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
                                     Follow-along projects that guests can make
                                     at home
@@ -1113,7 +1113,7 @@
                                     conversation
                                   </li>
                                 </ul>
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   Guests should feel immersed in the experience
                                   the entire time, like they’re an active part
                                   of it.
