--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1064,8 +1064,8 @@
                               </section>
                             </div>
                             <div class="site-content__content-menu">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
                                   <div class="main-content__details-form-repeat-sched">
                                     Choose the theme that best describes what
                                     guests will enjoy.
@@ -1253,7 +1253,7 @@
               </header>
               <div class="_1qp92agj">
                 <div class="_x5o5nt">
-                  <div class="_1a488ly">
+                  <div class="inbox-items-header__icon">
                     <svg
                       viewBox="0 0 32 32"
                       xmlns="http://www.w3.org/2000/svg"
@@ -1283,7 +1283,7 @@
                         <input
                           placeholder="Search"
                           aria-label="Search"
-                          class="_1oynp31"
+                          class="input-field-search"
                           id="theme-search-input"
                           autocomplete="off"
                           type="text"
