--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1089,15 +1089,15 @@
                                 ></div>
                               </div>
                             </div>
-                            <div class="_1uhu1ks">
+                            <div class="site-content__content-wrapper-rules">
                               <div class="inline">
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   We’re looking for hosts who can also master
                                   the technical aspects of a great online
                                   experience.
                                 </p>
                                 For example:
-                                <ul class="_14mdv64">
+                                <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
                                     Lighting that helps guests to see you and
                                     the activity
@@ -1111,7 +1111,7 @@
                                     disconnections
                                   </li>
                                 </ul>
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   Guests shouldn’t be distracted by glitches,
                                   and you should be able to patiently guide them
                                   if they’re having trouble.
