--- a/submission/video.html
+++ b/submission/video.html
@@ -1072,13 +1072,13 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_1muy8yf"
+                                  <span class="site-content__content-menu-h2-text"
                                     >Follow the checklist</span
                                   >
                                 </h2>
                                 <div class="_942b9f">
                                   <div class="inline">
-                                    <p class="_1mm0shk">
+                                    <p class="site-content__content-wrapper-rules-note">
                                       Reference our step-by-step checklist to
                                       plan out your video—it has detailed
                                       requirements on what your demonstration
@@ -1087,7 +1087,7 @@
                                       able to review your experience unless it
                                       follows this format.
                                     </p>
-                                    <p class="_1mm0shk">
+                                    <p class="site-content__content-wrapper-rules-note">
                                       The recording can be as concise as you’d
                                       like, but please don’t go over 15 minutes.
                                     </p>
@@ -1117,22 +1117,22 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_1muy8yf"
+                                  <span class="site-content__content-menu-h2-text"
                                     >Upload your video</span
                                   >
                                 </h2>
                                 <div class="_942b9f">
                                   <div class="inline">
-                                    <p class="_1mm0shk">
+                                    <p class="site-content__content-wrapper-rules-note">
                                       You can use any program you’d like to
                                       record your video.
                                     </p>
-                                    <p class="_1mm0shk">
+                                    <p class="site-content__content-wrapper-rules-note">
                                       A
                                       <a
                                         href="https://support.zoom.us/hc/en-us/articles/360034967471"
                                         target="_blank"
-                                        ><span class="_1dsb80r"
+                                        ><span class="explore-filter-menu__list-link"
                                           >free Zoom account</span
                                         ></a
                                       >
@@ -1141,7 +1141,7 @@
                                       <a
                                         href="https://support.zoom.us/hc/en-us/articles/201362473"
                                         target="_blank"
-                                        ><span class="_1dsb80r"
+                                        ><span class="explore-filter-menu__list-link"
                                           >recording tutorial</span
                                         ></a
                                       >, if you need help. If you’re already an
@@ -1151,7 +1151,7 @@
                                       recording is disabled on Airbnb-provided
                                       Zoom accounts.
                                     </p>
-                                    <p class="_1mm0shk">
+                                    <p class="site-content__content-wrapper-rules-note">
                                       When you’re done, export the recording as
                                       an MP4 file. The file size must be under
                                       1GB.
