--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1061,21 +1061,21 @@
                               </section>
                             </div>
                             <div class="site-content__content-menu">
-                              <div id="description-label" class="_1gh8ie6">
+                              <div id="description-label" class="guest-container__form-question">
                                 What will you and your guests do?
                               </div>
-                              <ul class="_17qgme1">
-                                <li class="_1pz1yyw">
+                              <ul class="guest-container__form-question-ul">
+                                <li class="guest-container__form-question-li">
                                   Provide specific plans from start to finish,
                                   not multiple ideas or options
                                 </li>
-                                <li class="_1pz1yyw">
+                                <li class="guest-container__form-question-li">
                                   Describe what makes your experience
                                   special—something that guests wouldn’t do on
                                   their own
                                 </li>
                               </ul>
-                              <div class="_4l12l8">
+                              <div class="contact-host__textarea-container">
                                 <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
@@ -1095,7 +1095,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               </div>
                               <div class="_1b3feto">
                                 <div
-                                  class="_pxnjg"
+                                  class="description-textarea__help"
                                   id="description-textarea-help"
                                 >
                                   <span aria-hidden="true">574/1400</span
@@ -1114,9 +1114,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               </div>
                             </div>
                             <div class="_1ww49e7">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
-                                  <div class="_1wlfjr">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
+                                  <div class="site-content__content-menu-question">
                                     How long is your experience?
                                   </div>
                                 </legend>
@@ -1270,7 +1270,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   </div>
                                   <div class="place__recommended-no">
                                     <div
-                                      class="_pxnjg"
+                                      class="description-textarea__help"
                                       id="experience_duration-InputField-help"
                                     >
                                       Online experiences are typically 2 hours
@@ -1316,7 +1316,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             aria-labelledby="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Indoors or on my personal property-row-subtitle"
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
-                                            class="_g4rlqtx"
+                                            class="explore-filter-menu__radio-input"
                                             aria-invalid="false"
                                             type="radio"
                                             data-veloute="info_where_are_you_broadcasting-0"
