--- a/welcome_back.html
+++ b/welcome_back.html
@@ -88,7 +88,7 @@
                                       Become a Host
                                     </div>
                                   </a>
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -365,7 +365,7 @@
                                           </div>
                                         </label>
                                         <div class="_129y4gf">
-                                          <div class="_slm4k1">
+                                          <div class="spinner-chart__btn-wrapper">
                                             <button
                                               type="button"
                                               class="btn-link-condensed"
