--- a/wishlist.html
+++ b/wishlist.html
@@ -95,7 +95,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -166,7 +166,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">2</div>
+                                      <div class="status-no">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -307,7 +307,7 @@
                                                 filters</span>
                                             </div>
                                             <div class="fczcwlc dir dir-ltr">
-                                              <button class="_12i6oakv" aria-expanded="false" type="button">
+                                              <button class="header__search-date-option-exact-dates-btn" aria-expanded="false" type="button">
                                                 <span class="c194hv19 dir dir-ltr">
                                                   Sep 3 – 5</span>
                                                 <span aria-hidden="true" class="button__hidden-text">
@@ -553,7 +553,7 @@
                                                 <div class="confirm-pay__price-wrapper">
                                                   <button type="button" class="confirm-pay__price-btn">
                                                     <div class="_oeya9x">
-                                                      <div class="_tt122m">
+                                                      <div class="font-w-400">
                                                         <span aria-hidden="true">
                                                           ₱5,862 total</span>
                                                       </div>
@@ -835,7 +835,7 @@
                                                 <div class="confirm-pay__price-wrapper">
                                                   <button type="button" class="confirm-pay__price-btn">
                                                     <div class="_oeya9x">
-                                                      <div class="_tt122m">
+                                                      <div class="font-w-400">
                                                         <span aria-hidden="true">
                                                           ₱114,004 total</span>
                                                       </div>
@@ -1852,7 +1852,7 @@
                                           </div>
                                           <div class="fczcwlc dir dir-ltr">
                                             <button
-                                              class="_12i6oakv"
+                                              class="header__search-date-option-exact-dates-btn"
                                               aria-expanded="false"
                                               type="button"
                                             >
@@ -2614,7 +2614,7 @@
                                                       class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
-                                                        <div class="_tt122m">
+                                                        <div class="font-w-400">
                                                           <span
                                                             aria-hidden="true"
                                                             >₱7,351 total</span
@@ -3262,7 +3262,7 @@
                                                       class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
-                                                        <div class="_tt122m">
+                                                        <div class="font-w-400">
                                                           <span
                                                             aria-hidden="true"
                                                             >₱5,862 total</span
@@ -4006,7 +4006,7 @@
                                                       class="confirm-pay__price-btn"
                                                     >
                                                       <div class="_oeya9x">
-                                                        <div class="_tt122m">
+                                                        <div class="font-w-400">
                                                           <span
                                                             aria-hidden="true"
                                                             >₱114,004
