--- a/calendar_week.html
+++ b/calendar_week.html
@@ -90,7 +90,7 @@
                           aria-current="page"
                           href="calendar.html"
                           class="app-theme__navbar-left-menu-list-text-wrapper"
-                          ><div class="_ywzjut3">Calendar</div></a
+                          ><div class="app-theme__navbar-left-menu-list-text-a">Calendar</div></a
                         >
                       </div>
                     </li>
@@ -112,8 +112,8 @@
                       <div class="app-theme__navbar-left-menu-list">
                         <a href="insights.html" class="app-theme__navbar-left-menu-list-text-wrapper"
                           ><div class="app-theme__navbar-left-menu-list-text">
-                            Insights<strong class="_josukr"
-                              ><strong class="_19pdp32f">NEW</strong></strong
+                            Insights<strong class="app-theme__navbar-left-menu-list-strong"
+                              ><strong class="app-theme__menu-list-strong-text">NEW</strong></strong
                             >
                           </div></a
                         >
