--- a/edit/about.html
+++ b/edit/about.html
@@ -537,7 +537,7 @@
                                         data-section-id="ABOUT_HOST_INPUT"
                                       >
                                         <label for="about_host_input"
-                                          ><div class="_1wgf3yo">
+                                          ><div class="textarea-label-wrapper">
                                             <div
                                               class="account-container-mb__header-profile-wrapper"
                                               style="
@@ -551,7 +551,7 @@
                                               to host this experience?
                                             </div>
                                           </div>
-                                          <div class="_4l12l8">
+                                          <div class="contact-host__textarea-container">
                                             <div class="contact-host__textarea-wrapper">
                                               <div dir="ltr">
                                                 <textarea
@@ -572,7 +572,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                         >
                                         <div class="_1b3feto">
                                           <div
-                                            class="_pxnjg"
+                                            class="description-textarea__help"
                                             id="about_host_input-help"
                                           >
                                             <span aria-hidden="true"
