--- a/invite-friends.html
+++ b/invite-friends.html
@@ -71,7 +71,7 @@
                           Switch to hosting
                         </div></a
                       >
-                      <div class="_1ubw29">
+                      <div class="header-nav__button">
                         <button
                           type="button"
                           class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -142,7 +142,7 @@
                               alt=""
                             />
                           </div>
-                          <div class="_1f7hhcdo">2</div>
+                          <div class="status-no">2</div>
                         </button>
                       </div>
                     </div>
