--- a/login-security.html
+++ b/login-security.html
@@ -1161,7 +1161,7 @@
                                       Switch to hosting
                                     </div></a
                                   >
-                                  <div class="_1ubw29">
+                                  <div class="header-nav__button">
                                     <button
                                       type="button"
                                       class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
@@ -1232,7 +1232,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_1f7hhcdo">3</div>
+                                      <div class="status-no">3</div>
                                     </button>
                                   </div>
                                 </div>
