--- a/resolutions.html
+++ b/resolutions.html
@@ -165,7 +165,7 @@
                                 aria-labelledby="intent-send-money-row-title"
                                 aria-describedby="intent-send-money-row-subtitle"
                                 id="intent-send-money-row-radio-button"
-                                class="_g4rlqtx"
+                                class="explore-filter-menu__radio-input"
                                 type="radio"
                                 value="SEND_MONEY"
                                 checked=""
