--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1064,9 +1064,9 @@
                               </section>
                             </div>
                             <div class="site-content__content-menu">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
-                                  <div class="_1wlfjr">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
+                                  <div class="site-content__content-menu-question">
                                     Which city do you want to host your
                                     experience in?
                                   </div>
@@ -1129,8 +1129,8 @@
                               </fieldset>
                             </div>
                             <div class="_1ww49e7">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
                                   Which language(s) will you offer your
                                   experience in?
                                 </legend>
@@ -1204,8 +1204,8 @@
                               </fieldset>
                             </div>
                             <div class="_1y8yg3n">
-                              <fieldset class="_25bp3z">
-                                <legend class="_1wjt7fx">
+                              <fieldset class="site-content__content-fieldset">
+                                <legend class="site-content__content-menu-legend">
                                   <div class="main-content__details-form-repeat-sched">
                                     Airbnb partner organization (optional)
                                   </div>
@@ -1381,10 +1381,10 @@
                     data-testid="primary-language-ca"
                     id="radio-ca"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ca"
-                  /><span class="_dclc1y">Català</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Català</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1393,10 +1393,10 @@
                     data-testid="primary-language-de"
                     id="radio-de"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="de"
-                  /><span class="_dclc1y">Deutsch</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Deutsch</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1405,11 +1405,11 @@
                     data-testid="primary-language-en"
                     id="radio-en"
                     name=""
-                    class="_1j123cny"
+                    class="site-content__content-wrapper-rules-radio-yes"
                     type="radio"
                     value="en"
                     checked=""
-                  /><span class="_dclc1y">English</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">English</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1418,10 +1418,10 @@
                     data-testid="primary-language-es"
                     id="radio-es"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="es"
-                  /><span class="_dclc1y">Español</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Español</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1430,10 +1430,10 @@
                     data-testid="primary-language-fr"
                     id="radio-fr"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="fr"
-                  /><span class="_dclc1y">Français</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Français</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1442,10 +1442,10 @@
                     data-testid="primary-language-it"
                     id="radio-it"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="it"
-                  /><span class="_dclc1y">Italiano</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Italiano</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1454,10 +1454,10 @@
                     data-testid="primary-language-ja"
                     id="radio-ja"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ja"
-                  /><span class="_dclc1y">日本語</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">日本語</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1466,10 +1466,10 @@
                     data-testid="primary-language-ko"
                     id="radio-ko"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ko"
-                  /><span class="_dclc1y">한국어</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">한국어</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1478,10 +1478,10 @@
                     data-testid="primary-language-pt"
                     id="radio-pt"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="pt"
-                  /><span class="_dclc1y">Português</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Português</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1490,10 +1490,10 @@
                     data-testid="primary-language-ru"
                     id="radio-ru"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="ru"
-                  /><span class="_dclc1y">Русский</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">Русский</span></label
                 >
               </div>
               <div class="_hmz4rv">
@@ -1502,10 +1502,10 @@
                     data-testid="primary-language-zh"
                     id="radio-zh"
                     name=""
-                    class="_unew8tb"
+                    class="site-content__content-wrapper-rules-radio-no"
                     type="radio"
                     value="zh"
-                  /><span class="_dclc1y">中文 (简体)</span></label
+                  /><span class="site-content__content-wrapper-rules-radio-text-wrapper">中文 (简体)</span></label
                 >
               </div>
             </div>
