--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1086,16 +1086,16 @@
                                 ></div>
                               </div>
                             </div>
-                            <div class="_1uhu1ks">
+                            <div class="site-content__content-wrapper-rules">
                               <div class="inline">
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   We’re looking for experiences that don’t
                                   require difficult preparation or special
                                   materials, and can be enjoyed by the whole
                                   family.
                                 </p>
                                 For example:
-                                <ul class="_14mdv64">
+                                <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
                                     A cooking class using simple ingredients
                                   </li>
@@ -1106,17 +1106,17 @@
                                     A concert you can enjoy from the couch
                                   </li>
                                 </ul>
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   Guests should be able to show up, sign on, and
                                   have fun from wherever they are.
                                 </p>
                               </div>
                             </div>
-                            <div class="_1tluusc">
+                            <div class="site-content__content-wrapper-rules-radio-grp">
                               <div class="">
                                 <div class="margin__y-24">
-                                  <fieldset class="_25bp3z" role="radiogroup">
-                                    <legend class="_1wjt7fx">
+                                  <fieldset class="site-content__content-fieldset" role="radiogroup">
+                                    <legend class="site-content__content-menu-legend">
                                       <div class="inline">
                                         Are you able to share stories or educate
                                         guests about the animals in your
@@ -1130,13 +1130,13 @@
                                         ><input
                                           id="info_score_educate_about_animals-Yes"
                                           name="info_score_educate_about_animals"
-                                          class="_1j123cny"
+                                          class="site-content__content-wrapper-rules-radio-yes"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_score_educate_about_animals-0"
                                           value="0"
                                           checked=""
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">Yes</div></span
                                         ></label
                                       >
@@ -1148,12 +1148,12 @@
                                         ><input
                                           id="info_score_educate_about_animals-No"
                                           name="info_score_educate_about_animals"
-                                          class="_unew8tb"
+                                          class="site-content__content-wrapper-rules-radio-no"
                                           aria-invalid="false"
                                           type="radio"
                                           data-veloute="info_score_educate_about_animals-1"
                                           value="1"
-                                        /><span class="_dclc1y"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
                                           ><div class="payment-payout__notice-desc">No</div></span
                                         ></label
                                       >
