--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1089,15 +1089,15 @@
                                 ></div>
                               </div>
                             </div>
-                            <div class="_1uhu1ks">
+                            <div class="site-content__content-wrapper-rules">
                               <div class="inline">
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   We’re looking for hosts who can bring the
                                   magic of Airbnb Experiences online, and can
                                   meet these requirements:
                                 </p>
-                                <p class="_1mm0shk"></p>
-                                <ul class="_14mdv64">
+                                <p class="site-content__content-wrapper-rules-note"></p>
+                                <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
                                     <strong class="calendar-sideba__sched-event-time-wrapper">Expertise:</strong>
                                     Exceptional skill, ability, or background
@@ -1122,7 +1122,7 @@
                                     audio/video set-up
                                   </li>
                                 </ul>
-                                <p class="_1mm0shk">
+                                <p class="site-content__content-wrapper-rules-note">
                                   Let’s go over them together in more detail.
                                 </p>
                               </div>
