--- a/404.html
+++ b/404.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
+    <!-- For nested folders -->
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
+
     <title>404 Page Not Found - Airbnb</title>
   </head>
   <body>
